@@ -1,3 +1,12 @@
+2014-08-05  Jiang Jiang  <gzjjgod@gmail.com>
+
+	* tt_cmap.c (otf_create_ToUnicode_stream, create_ToUnicode_cmap):
+	Only load CMAP_TYPE_CODE_TO_CID cmap to do reverse lookup when
+	constructing ToUnicode streams for PDF.
+
+	* type0.c, type0.h, pdffont.c: Remove redundant pdf_font_findfont()
+	function.
+
 2014-08-05  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* pst_obj.c, t1_char.c: ANSI C function protos and definitions,
